--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.4.11",
     "pug": "^3.0.0",
     "stripe": "^8.92.0",
+    "uuid": "^8.3.1",
     "validator": "^13.1.1",
     "xss-clean": "^0.1.1"
   },
