--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hpp": "^0.2.3",
     "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
+    "moment-timezone": "^0.5.31",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.11",
